[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

# https://setuptools-git-versioning.readthedocs.io/en/stable/install.html
[tool.setuptools-git-versioning]
enabled = true

[project]
name = "citystreetview"
authors = [
    {name = "Jun Zhang", email = "zhangjun990222@gmail.com"},
]
description = "城市街景爬取工具（百度、Google）"
keywords = ["city", "street view"]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "numpy >= 1.24.0",
    "opencv-python >= 4.8.0.74",
    "Pillow >= 10.0.0",
    "requests >= 2.27.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tsinghua-fib-lab/citystreetview"
Repository = "https://github.com/tsinghua-fib-lab/citystreetview.git"
Issues = "https://github.com/tsinghua-fib-lab/citystreetview/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["citystreetview*"]
